RESOLVED FIXED195876
[WPE][GTK] Fix a build warning because of missing to handle an enum value
https://bugs.webkit.org/show_bug.cgi?id=195876
Summary [WPE][GTK] Fix a build warning because of missing to handle an enum value
Gyuyoung Kim
Reported 2019-03-18 01:11:21 PDT
When building WPE or GTK port, there is a build warning. I think that the warning has caused by missing to handle an enum value in the switch ~ case. [3540/4386] Building CXX object Source/WebCore/CMakeFiles/WebCore.dir/__/__/DerivedSources/WebCore/unified-sources/UnifiedSource-767013ce-18.cpp.o In file included from /home/gyuyoung/LGE/starfish/webkit/WebKit/WebKitBuild/Debug/DerivedSources/WebCore/unified-sources/UnifiedSource-767013ce-18.cpp:4:0: ../../Source/WebCore/page/scrolling/nicosia/ScrollingTreeNicosia.cpp: In member function ‘virtual WTF::Ref<WebCore::ScrollingTreeNode> WebCore::ScrollingTreeNicosia::createScrollingTreeNode(WebCore::ScrollingNodeType, WebCore::ScrollingNodeID)’: ../../Source/WebCore/page/scrolling/nicosia/ScrollingTreeNicosia.cpp:52:12: warning: enumeration value ‘Positioned’ not handled in switch [-Wswitch] switch (nodeType) { ^
Attachments
Patch (1.74 KB, patch)
2019-03-18 01:16 PDT, Gyuyoung Kim
no flags
Gyuyoung Kim
Comment 1 2019-03-18 01:16:59 PDT
WebKit Commit Bot
Comment 2 2019-03-18 02:30:52 PDT
Comment on attachment 365004 [details] Patch Clearing flags on attachment: 365004 Committed r243057: <https://trac.webkit.org/changeset/243057>
WebKit Commit Bot
Comment 3 2019-03-18 02:30:54 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.