[WPE][GTK] Fix a build warning because of missing to handle an enum value https://bugs.webkit.org/show_bug.cgi?id=195876

Reviewed by Žan Doberšek.

When building WPE or GTK port, there is a build warning. The switch-case needs to
handle *Positioned* enum value as well in order to avoid the build warning.

* page/scrolling/nicosia/ScrollingTreeNicosia.cpp:
(WebCore::ScrollingTreeNicosia::createScrollingTreeNode): Add case ScrollingNodeType::Positioned.


Canonical link: https://commits.webkit.org/210140@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@243057 268f45cc-cd09-0410-ab3c-d52691b4dbfc